--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,11 +10,6 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/opt/lampp/htdocs/symfoproject/bsTool/src/Controller/MainController.php</code></li>
-        <li>Your template at <code>/opt/lampp/htdocs/symfoproject/bsTool/templates/main/index.html.twig</code></li>
-    </ul>
+    Password {{ passwordApi }}
 </div>
 {% endblock %}
