--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -10,6 +10,13 @@
 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
-    currentWeather : {{ meteoString }}
+    <ul> hey {{ cities | length }} 
+        {% for city in cities %}
+            <li> a : {{ city.label }} </li>
+            <li> a : {{ city.insee_code }} </li>
+            <li> a : {{ city.zip_code }} </li>
+            <li> a : {{ city.latitude }} </li>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock %}
