--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -7,9 +7,13 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-
+{# 
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
-    <div> {{ meteoCities }} </div>
-</div>
+    <div> cid : {{ cid }} </div>
+    <div> uri : {{ uriblue.getUri() }}</div>
+    <div> did : {{ uriblue.getDID() }}</div>
+    <div> ndis:{{ uriblue.getNSID() }}</div>
+    <div> {{ uriblue.getRecord() }}</div>
+</div>#}
 {% endblock %}
